# fortformat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
fortran/: Makefile  output  reading.f90  run_with_gfortran.sh  writing  writing.f90
src/: dataframes.rs  de.rs  format_specs.rs  fort.pest  fort_error.rs  lib.rs  parsing.rs  ser.rs  serde_common.rs  serde_error.rs  values.pest
